# lol_extract_voice

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .lol.env  .lol.env.example  .version-suffix-rules.json  AGENTS.project.md  Config.py  LOCAL_GAME_FILES_REQUIREMENTS.md  Opt.py  README.md  Start.py  asr.py  asr0.py  config.ini  config.py  index.py  main.py  params.json  pyproject.toml  requirements.txt
.githooks/: post-checkout  pre-commit  pre-merge-commit
.github/release-notes/: v3.6.0.md  v3.6.1.md
.github/workflows/: release-build-gui.yml
Champions/: __init__.py
Data/: Manifest.py  __init__.py
Data/Dict/: start_cn.txt
Data/Dict/Extras/: drmundo.txt  graves.txt  irelia.txt  jayce.txt  kindred.txt  nasus.txt  neeko.txt  ornn.txt  pyke.txt  rengar.txt  sion.txt  skarner.txt  twistedfate.txt
Hashes/: __init__.py  __main__.py  manager.py
Ravioli/: __init__.py
Tools/: __init__.py  champion.py  data.py  hashes.py  hashs.py  rgt.py  wad.py
Utils/: __init__.py  common.py  downloader.py  event.py  logs.py  type_hints.py  wrapper.py  zip.py
config/: lol-audio-unpack.example.ini
data/: champion-summary.json  skins.json
data/champions/: -1.json  1.json  10.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  117.json  119.json  12.json  120.json  121.json  122.json  126.json  127.json  13.json  131.json  133.json  134.json  136.json  14.json  141.json  142.json  143.json  145.json  147.json  15.json  150.json  154.json  157.json  (+114 more)
docs/: API.md  CODING_STYLE.md  README.md  REMOTE.md
docs/api/: README.md  benchmarking_and_performance.md  cli_api.md  config_api.md  pipeline_api.md  python_api.md  remote_mode.md
docs/gui/: shared_entity_data_refresh.md
docs/logging/: README.md
scripts/: _uv.sh  benchmark_cli.py  benchmark_remote_live.py  benchmark_vgm_decode_compare.py  check_main_local_sources.py  check_version_suffix.py  demo_global_progress_strip.py  detect_loguru_ansi_palette.py  generate_app_icon.py  install_git_hooks.sh  setup_wsl_env.sh
scripts/pyinstaller/: build_gui.ps1  build_gui.py  gui.spec  runtime_hook_chdir.py
src/lol_audio_unpack/: __init__.py  __main__.py  app_context.py  config.py  config_loading.py  config_schema.py  facade.py  game_data_manager.py  main.py  manager.py  mapping.py  model.py  packer.py  params.json  remote_preparer.py  unpack.py  wav_background_job.py  wav_sidecar.py  wav_sidecar_runtime.py
src/lol_audio_unpack/Data/: Manifest.py  __init__.py  resource.py
tests/: __init__.py  conftest.py  remote_disk_usage.py  test_about_page.py  test_app_context.py  test_app_context_guard.py  test_app_package_api.py  test_champion_visibility.py  test_check_version_suffix.py  test_cli.py  test_cli_args.py  test_cli_external.py  test_cli_invocation.py  test_config.py  test_config_package_api.py  test_context_injection.py  test_data.py  test_data_reader_logging.py  test_disk_usage.py  test_entity_data_store.py  test_execution_page.py  test_execution_progress_panel.py  test_execution_queue_controller.py  test_execution_selection_controller.py  test_global_progress_strip.py  test_gui_config.py  test_gui_log_bridge.py  test_gui_service_logging.py  test_home_page.py  test_home_status_controller.py  test_home_widgets_module.py  test_integration_local_game.py  test_integration_pipeline_local_game.py  test_integration_remote_snapshot_extract.py  test_integration_remote_snapshot_map_mapping.py  test_integration_remote_snapshot_mapping.py  test_integration_remote_snapshot_update.py  test_log_drawer_controller.py  test_logging.py  test_manager_bin_updater.py  (+41 more)
tests/app/: test_app_context.py  test_app_context_guard.py  test_app_package_api.py  test_artifacts.py  test_facade.py  test_path_layout.py  test_targets.py
tests/cli/: test_cli.py  test_cli_external.py  test_cli_invocation.py  test_cli_text.py
tests/config/: test_config_package_api.py
tests/gui/: __init__.py  test_about_page.py  test_common_logging.py  test_data_loader.py  test_dev_console.py  test_dev_console_controller.py  test_execution_log_controller.py  test_execution_page.py  test_execution_process_worker.py  test_execution_progress_panel.py  test_execution_queue_controller.py  test_execution_selection_controller.py  test_feedback.py  test_global_progress_strip.py  test_global_progress_strip_demo.py  test_gui_config.py  test_gui_contracts.py  test_gui_resource_boundaries.py  test_home_page.py  test_home_status_controller.py  test_log_drawer_controller.py  test_mapping_page.py  test_overview_audio_tree.py  test_overview_page.py  test_overview_page_playback.py  test_overview_panels.py  test_overview_preview_controller.py  test_packaged_remote_mode_policy.py  test_page_style.py  test_path_picker_controller.py  test_preview_playback_controller.py  test_preview_tree_component.py  test_preview_tree_control_icon.py  test_remote_mode_policy.py  test_remote_source_panel.py  test_resource_catalog.py  test_runtime_logging_session.py  test_setting_page.py  test_setting_page_theme_preset.py  test_shared_data_controller.py  (+9 more)
tests/manager/: test_champion_visibility.py  test_data_reader_logging.py  test_manager_bin_updater.py  test_manager_data_updater.py  test_manager_utils.py
tests/mapping/: test_integration_remote_snapshot_map_mapping.py  test_integration_remote_snapshot_mapping.py  test_mapping.py  test_mapping_runtime_context_access.py
tests/model/: test_audio_entity_factory.py  test_model_package_api.py
tests/runtime/: test_remote_benchmark.py  test_remote_game_plans.py  test_remote_package_api.py  test_remote_preparer.py  test_runtime_paths.py  test_runtime_wad.py  test_runtime_wav_package_api.py  test_wav_transcode.py
tests/unpack/: test_integration_remote_snapshot_extract.py  test_unpack_bp_vo.py  test_unpack_package_api.py  test_unpack_stats_api.py  test_unpack_wav_transcode.py
tests/utils/: test_logging.py  test_path_constants.py  test_run_summary.py  test_utils_common_api.py  test_versioning.py
tools/RavioliGameTools/: RScanner.exe.config  Readme.txt
(+212 files in other folders)
