[project]
name = "lol-audio-unpack"
version = "3.2.0"
description = "英雄联盟游戏音频文件解包工具"
authors = [
    { name = "Virace", email = "Virace@aliyun.com" }
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "league-tools>=0.2.3",
    "cython>=3.0.11",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"unpack" = "lol_audio_unpack.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "memory-profiler>=0.61.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lol_audio_unpack"]

[tool.ruff]
line-length = 120

select = [
    "E", # pycodestyle Errors
    "W", # pycodestyle Warnings
    "F", # Pyflakes
    "B", # flake8-bugbear
    "PL", # Pylint
    "UP", # pyupgrade
    "I" # isort
]

ignore = [ "F401" ]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py312"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint]
max-args = 8

[tool.ruff.format]
docstring-code-format = true
